<resources>
    <string name="app_name">DietChart</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="didn_t_get_otp_resend">Didn\'t get OTP? <b>Resend</b></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_angry_gain">AngryGainActivity</string>
    <string name="your_suitable_diet_plan_is_here">Your Suitable Diet Plan is Here,</string>
    <string name="_1_gain_weight">1. How to Gain Weight the Healthy Way</string>
    <string name="if_you_want_to_gain_weight_">●If you want to gain weight, it’s very important to do it right.\n ●Binging on soda and donuts may help you gain weight, but it can destroy your health at the same time.\n ●If you’re underweight, you want to gain a balanced amount of muscle mass and subcutaneous fat rather than a lot of unhealthy belly fat.\n ●There are plenty of normal-weight people who get type 2 diabetes, heart disease and other health problems often associated with obesity\n ●Therefore, it’s absolutely essential to eat healthy foods and live an overall healthy lifestyle.</string>
    <string name="_2_gain_weight">2. Eat More Calories Than Your Body Burns</string>
    <string name="_3_angry_gain_weight">3. Eat Plenty of Protein</string>
    <string name="_4_angry_gain_weight">4. Fill up on Plenty of Carbs and Fat and Eat at Least 3 Times per Day</string>
    <string name="_5_angry_gain_weight">5. Lift Heavy Weights and Improve Your Strength</string>
    <string name="_6_angry_gain_weight">6. Here are some energy-dense foods that are perfect for gaining weight</string>
    <string name="the_most_important_thing_you_can_do_to_gain_weight_">●The most important thing you can do to gain weight is to create a calorie surplus, meaning you eat more calories than your body needs.\n ●You can determine your calorie needs using this calorie calculator or just simply multiply your weight by 29 you will know how much calories ypur body required to stay maintenance.\n ●If you want to gain weight slowly and steadily, aim for 300–500 calories more than you burn each day according to the calculator.\n ●If you want to gain weight fast, aim for around 700–1,000 calories above your maintenance level.\n ●Keep in mind that calorie calculators only provide estimates. Your needs may vary by several hundred calories per day, give or take.\n ●You don’t need to count calories for the rest of your life, but it helps to do it for the first few days or weeks to get a feel for how many calories you’re eating.\n</string>
    <string name="the_single_most_important_nutrient_">●The single most important nutrient for gaining healthy weight is protein.\n ●Muscle is made of protein and without it most of those extra calories may end up as body fat.\n ●Studies show that during periods of overfeeding, a high-protein diet causes many of the extra calories to be turned into muscle.\n ●However, keep in mind that protein is a double-edged sword. It’s also highly filling, which may reduce your hunger and appetite significantly, making it harder to get in enough calories.\n ●Aim for 0.7–1 grams of protein per pound of body weight (1.5–2.2 grams of protein per kilogram). You can even go above that if your calorie intake is very high.\n ●High-protein foods include meats, fish, eggs, many dairy products, legumes, nuts and others. Protein supplements like whey protein can also be useful if you struggle to get enough protein in your diet.</string>
    <string name="eat_plenty_of_high_carb_and_high_fat_foods_">●Eat plenty of high-carb and high-fat foods if weight gain is a priority for you. It is best to eat plenty of protein, fat and carbs at each meal.\n ●It is also a bad idea to do intermittent fasting. This is useful for weight loss and health improvement but can make it much harder to eat enough calories to gain weight.\n ●Make sure to eat at least three meals per day and try to add in energy-dense snacks whenever possible.</string>
    <string name="day_1_lazy_gain">DAY 1</string>
    <string name="day_2_lazy_gain">DAY 2</string>
    <string name="day_3_lazy_gain">DAY 3</string>
    <string name="day_4_lazy_gain">DAY 4</string>
    <string name="day_5_lazy_gain">DAY 5</string>
    <string name="day_6_lazy_gain">DAY 6</string>
    <string name="day_7_lazy_gain">DAY 7</string>
    <string name="breakfast_1_">●Breakfast - 1 katori corn mix vegetable upma with 1 cup milk with 1 tsp chironji in it.\n●Mid-day meal – 1 katori seasonal fruit with pinch of cinnamon powderln\n●Lunch – 2 wheat roti with 1 katori soya masala curry, 1 tbsp. mint chutney\n●Snacks – 1 katori sprouts chaat\n●Dinner – 1 sweet potato cheese wrap with 1tblsp mint chutney</string>
    <string name="breakfast_1_paneer_vegetable_">●Breakfast – 1 paneer vegetable sandwich\n ●Mid-day meal – 1 katori roasted poha chiwda with added peanut\n ●Lunch – 2 paneer mix vegetable paratha with 1 bowl tur dal\n ●Snacks – 1 katori boiled cheesy sweet corn\n ●Dinner – 1 katori soya masala pulao</string>
    <string name="breakfast_2_panchmel_dal_dosa_">●Breakfast – 2 panchmel dal dosa with 1tblsp green chutney\n ●Mid-day meal – 1 boiled potato with pinch of black pepper ( 1 med size)\n ●Lunch – 2 wheat roti with 1 katori mix sprouts usal, 1 katori salad\n ●Snacks – 1 banana date milkshake\n ●Dinner – 1 katori ragda pattice (3 pattice)</string>
    <string name="breakfast_1_katori_">●Breakfast – 1 katori aloo peas poha, 1 cup milk\n ●Mid-day meal – 1 glass almond milkshake\n ●Lunch – 2 aloo methi paratha, 1 katori matki usal, 1 katori daliya kheer\n ●Snacks – 1 katori kurmura ground chiwda, 1 cup milk with 1 tsp almond powder\n ●Dinner – 1 rajmah tikki roll, 1 tblsp avocado dip\n</string>
    <string name="breakfast_4_paneer_cheese_mix_veg_">●Breakfast – 4 paneer cheese mix veg tikki with mint dip\n ●Mid-day meal – 1 cup almond milk apricot milkshake\n ●Lunch – 1 bowl chole pulao with 1 katori mix vegetable curry\n ●Snacks – 4 muthiyas, 1 cup milk\n ●Dinner – 2 palak masala dosa with 1 katori drumstick leaves</string>
    <string name="breakfast_1_katori_oats_porridge_">●Breakfast – 1 katori oats porridge with added dry fruits\n ●Mid-day meal – 1 glass mango almond smoothie\n ●Lunch – 2 wheat roti with 1 katori aloo peas curryln ●Snacks – 1 katori bhel with veggies and groundnuts\n ●Dinner – 1 cheese vegetable grilled sandwich with 1 tbsp mint chutey</string>
    <string name="breakfast_1_cucumber_rajgeera_">●Breakfast – 1 cucumber rajgeera singhada Thalipeeth with 1 katori curd\n ●Mid-day meal – 1 katori sevai kheer\n ●Lunch – 1 katori soya masala with 2 palak paratha\n ●Snacks – 1 glass mix dryfruits milkshake\n ●Dinner - 1 katori jeera rice with panchmel dal tadka</string>
    <string name="_1_make_small_tweaks">1. Make small tweaks</string>
    <string name="cut_down_on_the_packaged_and_processed_foods_">Cut down on the packaged and processed foods; they\'re usually loaded with sodium, which may lead to bloating and a higher risk of heart problems. Whenever possible, eat fresh produce, as we always did in India, and make your juices by throwing diced fruits and veggies into the blender. Eliminate the white (rice, sugar, bread) and go for brown. Pick wholewheat atta over refined flour.</string>
    <string name="_2_eat_seasonal_fruits">2. Eat seasonal fruits</string>
    <string name="eat_seasonal_fruits_from_the_local_market_">Eat seasonal fruits from the local market instead of exotic imports found out of season. Seasonal fruits usually are rich in the compounds that the body needs for that time of the year, e.g. guava and orange, rich in Vitamin C, come to the market in winter, just when you need that vitamin to guard against the common cold.</string>
    <string name="_3_stir_fry_instead_of_deep_fry">3. Stir-fry instead of deep-fry</string>
    <string name="the_occasional_samosa_won_t_bust_your_weight_loss_">The occasional samosa won\'t bust your weight loss plan, but on a daily basis, stir-frying is a far better idea than deep-frying, as you can keep the calorie count low without sacrificing taste.</string>
    <string name="_4_to_increase_the_basal_metabolic_rate">4. To increase the basal metabolic rate</string>
    <string name="eat_several_small_meals_a_day_">Eat several small meals a day. This gives the body repeated assurance that more food is coming -it stops hoarding calories and happily burns fat. A small meal isn\'t a bag of crisps and vending machine coffee; its a fruit, or a small portion of trail mix (dry fruits and unsalted nuts), or a small bowl of daal with a roti, or a bowl of oats.</string>
    <string name="_5_do_some_lightweight_training">5. Do some lightweight training</string>
    <string name="this_builds_muscle_tone_">This builds muscle tone, giving the body a more sculpted look, and increases the basal metabolic rate. A daily workout with light weights – make it a low–intensity workout, if you cannot do more – prompts the body to go on burning calories long after you\'ve stopped exercising. Even 5–10 minutes a day is a lot better than nothing. It doesn\'t take much to re-orient your lifestyle and achieve permanent weight loss. Think of it as perfect weight, made in India.</string>
    <string name="_6_sample_diet_chart_for_weight_loss">6. Sample Diet Chart For Weight Loss</string>
    <string name="_7am_lemon_juice_in_warm_water_">7am: Lemon juice in warm water; a tiny piece of raw ginger (to be chewed).\n8am: Breakfast made fresh with high-fibre cereals like oats and bajra, topped by a spoonful of ground flax seed; a glass of milk or a bowl of curd; one fruit, e.g. diced papaya.\n10.30am: About half a dozen almonds and some walnuts.\n1pm: A bowl of salad with olive oil drizzled on it; a small bowl of brown rice with stir-fried vegetables; one roti with daal.\n3pm: A glass of chaas and a banana.\n5pm: A cup of green tea, and two multigrain biscuits.\n7pm: A small bowl of sprouts, or a very small helping of dry fruits.\n8pm: A bowl of daal, a few cubes of cottage cheese, two rotis, sauteed vegetables.\n10pm: A small glass of warm milk. N.B. This diet chart for weight loss is for illustrative purposes only.</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="details">Details</string>
    <string name="what_s_your_name">What\'s Your Name?</string>
    <string name="enter_your_name_here">Enter Your Name Here</string>
    <string name="enter_your_age">Enter Your Age</string>
    <string name="_00">00</string>
    <string name="enter_your_gender">Enter Your Gender</string>
    <string name="enter_your_gender_here_optional">Enter Your Gender Here (Optional)</string>
    <string name="enter_your_height">Enter Your Height</string>
    <string name="_0_0">0.0</string>
    <string name="enter_your_weight">Enter Your Weight</string>
    <string name="_00_0">00.0</string>
    <string name="create_your_account_using_your_email_and_create_password">Create Your Account Using Your Email And Create Password</string>
    <string name="create">Create</string>
</resources>