<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.login.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/details"
        android:textAlignment="center"
        android:textColor="#CF5B37"
        android:textSize="35sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/detail1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/what_s_your_name"
            android:textAlignment="center"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/registeredNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/enter_your_name_here"
            android:textAlignment="center"
            android:importantForAutofill="no"
            android:inputType="text" />

        <Button
            android:id="@+id/nameNextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/next" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/enter_your_age"
            android:textAlignment="center"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/registeredAgeTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/_00"
            android:inputType="number"
            android:textAlignment="center"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/ageNextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/next" />


    </LinearLayout>


    <LinearLayout

        android:id="@+id/detail3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/enter_your_gender"
            android:textAlignment="center"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/registeredGenderTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/enter_your_gender_here_optional"
            android:textAlignment="center"
            android:importantForAutofill="no"
            android:inputType="text" />

        <Button
            android:id="@+id/genderNextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/next" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/detail4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/enter_your_height"
            android:textAlignment="center"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/registeredHeightTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/_0_0"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/heightNextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/next" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/enter_your_weight"
            android:textAlignment="center"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/registeredWeightTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/_00_0"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/weightNextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/next" />

    </LinearLayout>




    <LinearLayout
        android:id="@+id/detail6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/create_your_account_using_your_email_and_create_password"
            android:textAlignment="center"
            android:textColor="#000" />

        <EditText
            android:id="@+id/createEmailTxt"
            android:layout_width="match_parent"
            android:layout_marginTop="50dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_your_email"
            android:textAlignment="center"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/createPasswordTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/CreateBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/create" />


    </LinearLayout>

</LinearLayout>